--- a/config.yaml
+++ b/config.yaml
@@ -9,9 +9,11 @@ Output_CoCo_folders:
   labelme_data:
     train_folder: "labelme_data/train"
     val_folder: "labelme_data/val"
+    test_folder: "labelme_data/test"
   coco:
     coco_train: "coco/train2017"
     coco_val: "coco/val2017"
+    coco_test: "coco/test2017"
     coco_annotations: "coco/annotations"
 
 Fixed_categories : ['pluckable', 'unpluckable', 'middle', 'other']
